<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/cardview_shadow_end_color"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.pachecocarpio.xpressmusicui.ListaCanciones">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/bg_banner_arctic_monkeys" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/cardview_shadow_end_color"
                android:orientation="horizontal">

                <android.support.v7.widget.CardView
                    android:layout_width="150dp"
                    android:layout_height="150dp">

                    <android.support.v7.widget.GridLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:columnCount="2">

                        <ImageView
                            android:id="@+id/imageView16"
                            android:layout_width="75dp"
                            android:layout_height="75dp"
                            app:srcCompat="@drawable/bg_album_uno" />

                        <ImageView
                            android:id="@+id/imageView15"
                            android:layout_width="75dp"
                            android:layout_height="75dp"
                            app:srcCompat="@drawable/bg_album_tres" />

                        <ImageView
                            android:id="@+id/imageView5"
                            android:layout_width="75dp"
                            android:layout_height="75dp"
                            android:layout_weight="1"
                            app:srcCompat="@drawable/bg_album_cuatro" />

                        <ImageView
                            android:id="@+id/imageView6"
                            android:layout_width="75dp"
                            android:layout_height="75dp"
                            app:srcCompat="@drawable/bg_album_dos" />

                    </android.support.v7.widget.GridLayout>
                </android.support.v7.widget.CardView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="5dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="@string/title_remix"
                        android:textColor="@android:color/black"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/subtitle_name_songs_playlist" />

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/subtitle_songs_playlist" />
                </LinearLayout>

            </LinearLayout>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                app:cardBackgroundColor="@color/cardview_shadow_end_color">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/imageView22"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        app:srcCompat="@drawable/bg_album_cuatro" />

                    <TextView
                        android:id="@+id/textView18"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:layout_toEndOf="@+id/imageView22"
                        android:text="@string/title_song_ibet"
                        android:textColor="@android:color/black" />

                    <TextView
                        android:id="@+id/textView20"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignStart="@+id/textView18"
                        android:layout_below="@+id/textView18"
                        android:text="@string/title_artist_artic_monkeys"
                        android:textSize="10sp" />

                    <ImageView
                        android:id="@+id/imageView25"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/dots_vertical"
                        android:layout_centerVertical="true"
                        android:layout_alignParentEnd="true" />

                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                app:cardBackgroundColor="@color/cardview_shadow_end_color" >

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/imageView23"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        app:srcCompat="@drawable/bg_album_dos" />

                    <TextView
                        android:id="@+id/textView17"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_marginStart="17dp"
                        android:layout_marginTop="9dp"
                        android:layout_toEndOf="@+id/imageView23"
                        android:text="@string/title_song_what"
                        android:textColor="@android:color/black" />

                    <TextView
                        android:id="@+id/textView19"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignStart="@+id/textView17"
                        android:layout_below="@+id/textView17"
                        android:text="@string/title_artist_artic_monkeys"
                        android:textSize="10sp" />

                    <ImageView
                        android:id="@+id/imageView26"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/dots_vertical"
                        android:layout_centerVertical="true"
                        android:layout_alignParentEnd="true" />

                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                app:cardBackgroundColor="@color/cardview_shadow_end_color">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/imageView24"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        app:srcCompat="@drawable/bg_album_tres" />

                    <TextView
                        android:id="@+id/textView14"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="9dp"
                        android:text="@string/title_song_humbug"
                        android:textColor="@android:color/black"
                        android:layout_alignParentTop="true"
                        android:layout_toEndOf="@+id/imageView24" />

                    <TextView
                        android:id="@+id/textView24"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignStart="@+id/textView14"
                        android:layout_below="@+id/textView14"
                        android:text="@string/title_artist_artic_monkeys"
                        android:textSize="10sp" />

                    <ImageView
                        android:id="@+id/imageView27"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/dots_vertical"
                        android:layout_centerVertical="true"
                        android:layout_alignParentEnd="true" />
                </RelativeLayout>
            </android.support.v7.widget.CardView>

        </LinearLayout>
    </ScrollView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardElevation="2dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="75dp">

            <ImageView
                android:id="@+id/imageView20"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="17dp"
                app:srcCompat="@drawable/pause" />

            <ImageView
                android:id="@+id/imageView21"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentStart="true"
                android:layout_alignTop="@+id/imageView20"
                android:layout_marginStart="10dp"
                app:srcCompat="@drawable/bg_album_tres" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/imageView21"
                android:layout_marginStart="12dp"
                android:layout_toEndOf="@+id/imageView21"
                android:text="@string/title_song_humbug"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/imageView21"
                android:layout_alignStart="@+id/textView10"
                android:layout_marginBottom="8dp"
                android:text="@string/title_artist_artic_monkeys" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>
