<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.pachecocarpio.xpressmusicui.MainActivity"
    android:weightSum="1">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/relativo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/bg_banner_menu" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/imageView4"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="24dp"
                    android:fontFamily="monospace"
                    android:text="@string/title_menu"
                    android:textColor="@android:color/background_light"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:typeface="monospace" />
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/canciones"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <android.support.v7.widget.CardView
                    android:id="@+id/card_am"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    app:cardCornerRadius="2dp"
                    app:cardElevation="3dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/imageView7"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:srcCompat="@drawable/bg_album_uno" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginTop="10dp"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/textView2"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_marginStart="5dp"
                                android:layout_weight="1"
                                android:text="@string/subtitle_album_three"
                                android:textColor="@android:color/black"
                                android:textSize="18sp" />

                            <ImageView
                                android:id="@+id/imageView8"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                app:srcCompat="@drawable/dots_vertical" />
                        </LinearLayout>

                        <TextView
                            android:id="@+id/textView3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="5dp"
                            android:layout_marginStart="5dp"
                            android:layout_marginTop="5dp"
                            android:text="@string/subtitle_songs"
                            android:textColor="@android:color/black" />


                    </LinearLayout>
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    app:cardCornerRadius="2dp"
                    app:cardElevation="3dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/imageView9"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:srcCompat="@drawable/bg_album_dos" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginTop="10dp"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/textView7"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_marginStart="5dp"
                                android:layout_weight="1"
                                android:text="@string/subtitle_album_one"
                                android:textColor="@android:color/black"
                                android:textSize="18sp" />

                            <ImageView
                                android:id="@+id/imageView10"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                app:srcCompat="@drawable/dots_vertical" />
                        </LinearLayout>

                        <TextView
                            android:id="@+id/textView5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="5dp"
                            android:layout_marginStart="5dp"
                            android:layout_marginTop="5dp"
                            android:text="@string/subtitle_songs"
                            android:textColor="@android:color/black" />


                    </LinearLayout>
                </android.support.v7.widget.CardView>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/canciones_2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <android.support.v7.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="15dp"
                    app:cardCornerRadius="2dp"
                    app:cardElevation="3dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/imageView11"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:srcCompat="@drawable/bg_album_tres" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginTop="10dp"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/textView21"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_marginStart="5dp"
                                android:layout_weight="1"
                                android:text="@string/subtitle_album_two"
                                android:textColor="@android:color/black"
                                android:textSize="18sp" />

                            <ImageView
                                android:id="@+id/imageView12"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                app:srcCompat="@drawable/dots_vertical" />
                        </LinearLayout>

                        <TextView
                            android:id="@+id/textView32"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:layout_marginTop="5dp"
                            android:layout_marginBottom="5dp"
                            android:text="@string/subtitle_songs"
                            android:textColor="@android:color/black" />


                    </LinearLayout>
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="15dp"
                    app:cardCornerRadius="2dp"
                    app:cardElevation="3dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/imageView13"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:srcCompat="@drawable/bg_album_cuatro" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginTop="10dp"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/textView47"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_marginStart="5dp"
                                android:layout_weight="1"
                                android:text="@string/subtitle_album_four"
                                android:textColor="@android:color/black"
                                android:textSize="18sp" />

                            <ImageView
                                android:id="@+id/imageView14"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                app:srcCompat="@drawable/dots_vertical" />
                        </LinearLayout>

                        <TextView
                            android:id="@+id/textView55"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="5dp"
                            android:layout_marginStart="5dp"
                            android:layout_marginTop="5dp"
                            android:text="@string/subtitle_songs"
                            android:textColor="@android:color/black" />


                    </LinearLayout>
                </android.support.v7.widget.CardView>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>
